Change flashcard structure

--- a/public/flashcards/flashcardListDisplay.html
+++ b/public/flashcards/flashcardListDisplay.html
@@ -12,7 +12,7 @@
         ng-click="$ctrl.clickRow(flashcard)">
       <td>{{flashcard.front}}</td>
       <td>{{flashcard.back}}</td>
-      <td>{{flashcard.category.name}}</td>
+      <td>{{flashcard.category_name}}</td>
       <td><span ng-show="hovering" 
                 class="glyphicon glyphicon-remove" 
                 ng-mouseenter="delhovering = true"
